--- a/Source/Examples/XamarinIOS/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/XamarinIOS/ExampleBrowser/ExampleBrowser.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{8A7939AC-BAC2-4CFB-B429-DB92F106700C}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MonoTouch.Demo</RootNamespace>
-    <AssemblyName>MonoTouchDemo</AssemblyName>
+    <RootNamespace>ExampleBrowser</RootNamespace>
+    <AssemblyName>ExampleBrowser</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
