IconGenerator: include TruePNG in output folder

--- a/Source/Tools/IconGenerator/IconGenerator.csproj
+++ b/Source/Tools/IconGenerator/IconGenerator.csproj
@@ -70,6 +70,12 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\Tools\TruePNG\TruePNG.exe">
+      <Link>TruePNG.exe</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
