--- a/Source/Examples/Silverlight/ExampleBrowser.Web/Web.config
+++ b/Source/Examples/Silverlight/ExampleBrowser.Web/Web.config
@@ -7,7 +7,8 @@
 
 <configuration>
     <system.web>
-        <compilation debug="true" targetFramework="4.0" />
+      <compilation debug="true" targetFramework="4.0" />
+      <httpRuntime targetFramework="4.0" />
     </system.web>
 
 </configuration>
