ExampleLibrary .NET 3.5: correct target imports

--- a/Source/Examples/ExampleLibrary/ExampleLibrary_NET35.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_NET35.csproj
@@ -108,5 +108,5 @@
       <Name>OxyPlot_NET35</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
