--- a/Source/OxyPlot/OxyPlot_SL4.csproj
+++ b/Source/OxyPlot/OxyPlot_SL4.csproj
@@ -72,41 +72,41 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LibraryDoc.cs" />
     <Compile Include="NamespaceDoc.cs" />
+    <None Include="ClassDiagrams\Axes.cd" />
     <Compile Include="Foundation\PlotLength.cs" />
     <Compile Include="Foundation\PlotLengthUnit.cs" />
     <Compile Include="Foundation\CodeGenerator\CodeGenerationAttribute.cs" />
     <Compile Include="Foundation\CodeGenerator\CodeGenerator.cs" />
     <Compile Include="Foundation\CodeGenerator\CodeGeneratorStringExtensions.cs" />
     <Compile Include="Foundation\CodeGenerator\ICodeGenerating.cs" />
-    <Compile Include="Foundation\OxyPalette.cs" />
-    <Compile Include="Foundation\OxyPalettes.cs" />
-    <Compile Include="Foundation\ScreenVector.cs" />
-    <Compile Include="Foundation\StringHelper.cs" />
-    <Compile Include="Foundation\FractionHelper.cs" />
-    <Compile Include="Foundation\ArrayHelper.cs" />
     <Compile Include="Foundation\IDataPoint.cs" />
-    <Compile Include="Foundation\ReflectionHelper.cs" />
-    <Compile Include="Foundation\ScreenPointHelper.cs" />
     <Compile Include="Foundation\IDataPointProvider.cs" />
-    <Compile Include="Foundation\CanonicalSplineHelper.cs" />
-    <Compile Include="Foundation\FontWeights.cs" />
-    <Compile Include="Foundation\OxyThickness.cs" />
-    <Compile Include="Foundation\ScreenPoint.cs" />
-    <Compile Include="Foundation\OxyRect.cs" />
-    <Compile Include="Foundation\OxySize.cs" />
-    <Compile Include="Foundation\SutherlandHodgmanClipping.cs" />
-    <Compile Include="Foundation\CohenSutherlandClipping.cs" />
-    <Compile Include="Foundation\OxyPenLineJoin.cs" />
-    <Compile Include="Foundation\HorizontalAlignment.cs" />
-    <Compile Include="Foundation\VerticalAlignment.cs" />
-    <Compile Include="Foundation\OxyColor.cs" />
-    <Compile Include="Foundation\OxyColors.cs" />
-    <Compile Include="Foundation\OxyPen.cs" />
-    <Compile Include="Foundation\Conrec.cs" />
-    <Compile Include="Foundation\LineStyleHelper.cs" />
     <Compile Include="Foundation\DataPoint.cs" />
     <Compile Include="Foundation\MarkerType.cs" />
-    <Compile Include="Foundation\LineStyle.cs" />
+    <Compile Include="Rendering\OxyPalette.cs" />
+    <Compile Include="Rendering\OxyPalettes.cs" />
+    <Compile Include="Rendering\ScreenVector.cs" />
+    <Compile Include="Rendering\ScreenPointHelper.cs" />
+    <Compile Include="Rendering\Utilities\CanonicalSplineHelper.cs" />
+    <Compile Include="Rendering\FontWeights.cs" />
+    <Compile Include="Rendering\OxyThickness.cs" />
+    <Compile Include="Rendering\ScreenPoint.cs" />
+    <Compile Include="Rendering\OxyRect.cs" />
+    <Compile Include="Rendering\OxySize.cs" />
+    <Compile Include="Rendering\Utilities\SutherlandHodgmanClipping.cs" />
+    <Compile Include="Rendering\Utilities\CohenSutherlandClipping.cs" />
+    <Compile Include="Rendering\OxyPenLineJoin.cs" />
+    <Compile Include="Rendering\HorizontalAlignment.cs" />
+    <Compile Include="Rendering\VerticalAlignment.cs" />
+    <Compile Include="Rendering\OxyColor.cs" />
+    <Compile Include="Rendering\OxyColors.cs" />
+    <Compile Include="Rendering\OxyPen.cs" />
+    <Compile Include="Rendering\LineStyleHelper.cs" />
+    <Compile Include="Rendering\LineStyle.cs" />
+    <Compile Include="Rendering\RenderContext\MathRenderingExtensions.cs" />
+    <Compile Include="Rendering\RenderContext\RenderContextBase.cs" />
+    <Compile Include="Rendering\RenderContext\RenderingExtensions.cs" />
+    <Compile Include="Rendering\RenderContext\IRenderContext.cs" />
     <Compile Include="Input\OxyKey.cs" />
     <Compile Include="Input\OxyModifierKeys.cs" />
     <Compile Include="Input\OxyMouseButton.cs" />
@@ -127,15 +127,15 @@
     <Compile Include="Pdf\PortableDocument.cs" />
     <Compile Include="Pdf\PortableDocumentImageUtilities.cs" />
     <Compile Include="Pdf\StandardFonts.cs" />
-    <Compile Include="Reporting\Report\Alignment.cs" />
-    <Compile Include="Reporting\Report\TableCell.cs" />
-    <Compile Include="Reporting\Report\TableColumn.cs" />
-    <Compile Include="Reporting\Report\TableRow.cs" />
-    <Compile Include="Series\NamespaceDoc.cs" />
     <Compile Include="Utilities\XmlWriterBase.cs" />
     <Compile Include="Utilities\BinaryReaderExtensions.cs" />
     <Compile Include="Utilities\ListFiller.cs" />
     <Compile Include="Utilities\StreamExtensions.cs" />
+    <Compile Include="Utilities\StringHelper.cs" />
+    <Compile Include="Utilities\FractionHelper.cs" />
+    <Compile Include="Utilities\ArrayHelper.cs" />
+    <Compile Include="Utilities\ReflectionHelper.cs" />
+    <Compile Include="Utilities\Conrec.cs" />
     <Compile Include="Imaging\OxyImage.cs" />
     <Compile Include="Imaging\OxyImageInfo.cs" />
     <Compile Include="Imaging\ImageEncoderOptions.cs" />
@@ -148,7 +148,6 @@
     <Compile Include="Imaging\Png\PngDecoder.cs" />
     <Compile Include="Imaging\Png\PngEncoder.cs" />
     <Compile Include="Imaging\Png\PngEncoderOptions.cs" />
-    <None Include="ClassDiagrams\Axes.cd" />
     <None Include="Imaging\Jpeg\JpegDecoder.cs" />
     <Compile Include="Imaging\Deflate\Arrays.cs" />
     <Compile Include="Imaging\Deflate\BitReader.cs" />
@@ -201,6 +200,10 @@
     <Compile Include="Axes\MagnitudeAxis.cs" />
     <Compile Include="Axes\TickStyle.cs" />
     <Compile Include="Axes\TimeSpanAxis.cs" />
+    <Compile Include="Axes\Rendering\AxisRendererBase.cs" />
+    <Compile Include="Axes\Rendering\AngleAxisRenderer.cs" />
+    <Compile Include="Axes\Rendering\MagnitudeAxisRenderer.cs" />
+    <Compile Include="Axes\Rendering\HorizontalAndVerticalAxisRenderer.cs" />
     <Compile Include="Manipulators\IPlotControl.cs" />
     <Compile Include="Manipulators\ZoomManipulator.cs" />
     <Compile Include="Manipulators\ZoomStepManipulator.cs" />
@@ -216,7 +219,6 @@
     <Compile Include="PlotModel\Selection.cs" />
     <Compile Include="PlotModel\SelectionMode.cs" />
     <Compile Include="PlotModel\TrackerEventArgs.cs" />
-    <Compile Include="Reporting\NamespaceDoc.cs" />
     <Compile Include="Series\BarSeries\BarItem.cs" />
     <Compile Include="Series\BarSeries\BarItemBase.cs" />
     <Compile Include="Series\BarSeries\BarSeriesBase{T}.cs" />
@@ -238,14 +240,7 @@
     <Compile Include="PlotModel\PlotModel.cs" />
     <Compile Include="PlotModel\SelectablePlotElement.cs" />
     <Compile Include="PlotModel\UIPlotElement.cs" />
-    <Compile Include="Render\AxisRendererBase.cs" />
-    <Compile Include="Render\AngleAxisRenderer.cs" />
-    <Compile Include="Render\MagnitudeAxisRenderer.cs" />
-    <Compile Include="Render\MathRenderingExtensions.cs" />
-    <Compile Include="Render\RenderContextBase.cs" />
-    <Compile Include="Render\RenderingExtensions.cs" />
-    <Compile Include="Render\HorizontalAndVerticalAxisRenderer.cs" />
-    <Compile Include="Render\IRenderContext.cs" />
+    <Compile Include="Reporting\NamespaceDoc.cs" />
     <Compile Include="Reporting\ReportWriters\WikiReportWriter.cs" />
     <Compile Include="Reporting\ReportWriters\HtmlReportWriter.cs" />
     <Compile Include="Reporting\ReportWriters\IReportWriter.cs" />
@@ -269,6 +264,11 @@
     <Compile Include="Reporting\Report\ReportSection.cs" />
     <Compile Include="Reporting\Report\Table.cs" />
     <Compile Include="Reporting\Report\ItemsTableField.cs" />
+    <Compile Include="Reporting\Report\Alignment.cs" />
+    <Compile Include="Reporting\Report\TableCell.cs" />
+    <Compile Include="Reporting\Report\TableColumn.cs" />
+    <Compile Include="Reporting\Report\TableRow.cs" />
+    <Compile Include="Series\NamespaceDoc.cs" />
     <Compile Include="Series\AreaSeries.cs" />
     <Compile Include="Series\BarSeries\LabelPlacement.cs" />
     <Compile Include="Series\CandleStickSeries.cs" />
