Fix #10129: Show code in Silverlight Example browser

--- a/Source/Examples/Silverlight/ExampleBrowser.Web/ExampleBrowser.Web.csproj
+++ b/Source/Examples/Silverlight/ExampleBrowser.Web/ExampleBrowser.Web.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ClientBin\System.Windows.Controls.zip" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
