--- a/Source/Examples/Silverlight/ExampleBrowser/ExampleBrowser.csproj
+++ b/Source/Examples/Silverlight/ExampleBrowser/ExampleBrowser.csproj
@@ -67,6 +67,7 @@
       <HintPath>$(TargetFrameworkDirectory)System.Core.dll</HintPath>
     </Reference>
     <Reference Include="System.Net" />
+    <Reference Include="System.Windows.Controls, Version=5.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
