--- a/Source/Examples/XamarinAndroid/ExampleBrowser/Properties/AndroidManifest.xml
+++ b/Source/Examples/XamarinAndroid/ExampleBrowser/Properties/AndroidManifest.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionCode="1" android:versionName="Alpha">
-  <application android:label="OxyPlot Example Browser">
-  </application>
-  <uses-sdk android:minSdkVersion="4" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="preferExternal" android:versionName="Alpha" package="OxyPlot" android:versionCode="1">
+	<application android:label="OxyPlot Example Browser">
+	</application>
+	<uses-sdk android:minSdkVersion="4" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
