--- a/Source/Examples/DocumentationExamples/HelloWorld/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/Source/Examples/DocumentationExamples/HelloWorld/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>WindowsFormsApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,10 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="OxyPlot">
-      <HintPath>..\packages\OxyPlot.WindowsForms.2013.2.133.1\lib\NET40\OxyPlot.dll</HintPath>
+      <HintPath>..\..\..\..\packages\OxyPlot.WindowsForms.2014.1.258.1\lib\NET40\OxyPlot.dll</HintPath>
     </Reference>
     <Reference Include="OxyPlot.WindowsForms">
-      <HintPath>..\packages\OxyPlot.WindowsForms.2013.2.133.1\lib\NET40\OxyPlot.WindowsForms.dll</HintPath>
+      <HintPath>..\..\..\..\packages\OxyPlot.WindowsForms.2014.1.258.1\lib\NET40\OxyPlot.WindowsForms.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -82,6 +84,7 @@
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
