Fix unbind bug in PlotController (discussions/540115)

--- a/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
+++ b/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Pdf\PdfExporterTests.cs" />
     <Compile Include="Pdf\PortableDocumentExtensions.cs" />
     <Compile Include="Pdf\PortableDocumentTests.cs" />
+    <Compile Include="PlotController\PlotControllerTests.cs" />
     <Compile Include="TestModels.cs" />
     <Compile Include="Svg\SvgAssert.cs" />
     <Compile Include="Svg\SvgExporterTests.cs" />
