StyleCop cleanup, add StyleCop tasks to Windows projects

--- a/Source/OxyPlot.Silverlight/OxyPlot.Silverlight.csproj
+++ b/Source/OxyPlot.Silverlight/OxyPlot.Silverlight.csproj
@@ -94,6 +94,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Silverlight\$(SilverlightVersion)\Microsoft.Silverlight.CSharp.targets" />
+  <Import Project="$(ProjectDir)\..\..\Tools\StyleCop\StyleCop.targets" Condition=" '$(OS)' == 'Windows_NT' " />
   <ProjectExtensions>
     <VisualStudio>
       <FlavorProperties GUID="{A1591282-1198-4647-A2B1-27E5FF5F6F3B}">
