--- a/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
+++ b/Source/OxyPlot.OpenXml/OxyPlot.OpenXml.csproj
@@ -63,5 +63,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(ProjectDir)\..\..\Tools\StyleCop\StyleCop.targets" Condition=" '$(OS)' == 'Windows_NT' " />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
 </Project>
