--- a/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
+++ b/Source/OxyPlot.Tests/OxyPlot.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Axes\AxisTests.cs" />
     <Compile Include="Axes\AxisUtilitiesTests.cs" />
     <Compile Include="Axes\LinearAxisTests.cs" />
+    <Compile Include="Foundation\DataPointTests.cs" />
     <Compile Include="Foundation\OxyColorTests.cs" />
     <Compile Include="Foundation\ListFillerTests.cs" />
     <Compile Include="Foundation\RenderingExtensionsTests.cs" />
