--- a/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/Info.plist
+++ b/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>SimpleDemo</string>
+	<string>OxyPlotSample.iOS</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -40,7 +40,7 @@
 	</array>
 	<key>CFBundleIconFiles</key>
 	<array>
-		<string>Resources/OxyPlot_120.png</string>
+		<string>Icon-60@2x</string>
 	</array>
 </dict>
 </plist>
