--- a/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/OxyPlotSample.iOS.csproj
+++ b/XamarinComponents/OxyPlot/samples/OxyPlotSample.iOS/OxyPlotSample.iOS.csproj
@@ -5,12 +5,12 @@
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A502B8F0-7C6F-4438-B0D7-B15D4CE90321}</ProjectGuid>
+    <ProjectGuid>{7C0D8F20-2BF4-43A3-9549-6BD42BF14BD1}</ProjectGuid>
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
-    <RootNamespace>SimpleDemo</RootNamespace>
+    <RootNamespace>OxyPlotSample.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
-    <AssemblyName>SimpleDemo</AssemblyName>
+    <AssemblyName>OxyPlotSampleiOS</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -24,9 +24,6 @@
     <MtouchLink>None</MtouchLink>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchDebug>true</MtouchDebug>
-    <MtouchI18n>
-    </MtouchI18n>
-    <MtouchArch>ARMv7</MtouchArch>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>full</DebugType>
@@ -100,15 +97,18 @@
     <Reference Include="monotouch" />
   </ItemGroup>
   <ItemGroup>
+    <BundleResource Include="Resources\Icon-60%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="SimpleDemoViewController.cs" />
-    <Compile Include="SimpleDemoViewController.designer.cs">
-      <DependentUpon>SimpleDemoViewController.cs</DependentUpon>
+    <Compile Include="OxyPlotSample.iOSViewController.cs" />
+    <Compile Include="OxyPlotSample.iOSViewController.designer.cs">
+      <DependentUpon>OxyPlotSample.iOSViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -117,21 +117,17 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\OxyPlot\OxyPlot.csproj">
+    <ProjectReference Include="..\..\..\..\Source\OxyPlot\OxyPlot.csproj">
       <Project>{7A0B35C0-DD17-4964-8E9A-44D6CECDC692}</Project>
       <Name>OxyPlot</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\OxyPlot.XamarinIOS\OxyPlot.XamarinIOS.csproj">
+    <ProjectReference Include="..\..\..\..\Source\OxyPlot.XamarinIOS\OxyPlot.XamarinIOS.csproj">
       <Project>{7DCF07B1-B8BD-4EF0-B1FC-2AAC4466B6C6}</Project>
       <Name>OxyPlot.XamarinIOS</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="..\..\..\..\Icons\OxyPlot_120.png">
-      <Link>Resources\OxyPlot_120.png</Link>
-    </BundleResource>
+    <ProjectReference Include="..\OxyPlotSample\OxyPlotSample.csproj">
+      <Project>{D1F615E8-0DE7-4CC1-B092-B7DF669ECA46}</Project>
+      <Name>OxyPlotSample</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
